Use flask-jwt-extended for login and registration
