# services/user_service.py
@@ -1,3 +1,4 @@
+import hashlib
 from datetime import datetime
 from flask import request, jsonify, make_response
 from flask_restful import Resource
@@ -6,6 +7,7 @@ from marshmallow import ValidationError
 from database.init import db_session
 from models.user_model import UserModel
 from schemas import UserSchema
+from flask_jwt_extended import create_access_token
 
 user_schema = UserSchema()
 user_list_schema = UserSchema(many=True)
@@ -28,12 +30,27 @@ class UserResource(Resource):
         except ValidationError as err:
             return make_response(jsonify({"errors": err.messages}), 400)
 
+        existing_user = (
+            db_session.query(UserModel)
+            .filter(UserModel.user_name == new_user.user_name)
+            .first()
+        )
+        if existing_user is not None:
+            return make_response(jsonify({"message": "User already exists"}), 409)
+
         if new_user.creation_date is None:
             new_user.creation_date = datetime.now()
+        
+        new_user.password = hashlib.sha256(new_user.password.encode()).hexdigest()
 
         db_session.add(new_user)
         db_session.commit()
-        return make_response(jsonify(user_schema.dump(new_user)), 201)
+        token = create_access_token(
+            identity=str(new_user.id), additional_claims={"user_name": new_user.user_name}
+        )
+        return make_response(
+            jsonify({"user": user_schema.dump(new_user), "token": token}), 201
+        )
 
     def put(self, user_id):
         user = db_session.query(UserModel).get(user_id)
